# Rosa_master_thesis

./: .gitignore  .gitmodules  README.md
aquaculture_inspection/aquaculture_inspection/: CMakeLists.txt  package.xml
aquaculture_inspection/aquaculture_inspection/doc/: README.md
aquaculture_inspection/sonar_based_localisation/: CMakeLists.txt  package.xml  setup.py
aquaculture_inspection/sonar_based_localisation/config/: config_sonar_based_localisation.yaml
aquaculture_inspection/sonar_based_localisation/docs/: README.md
aquaculture_inspection/sonar_based_localisation/launch/: inspection_controller.launch  sonar_based_localisation.launch
aquaculture_inspection/sonar_based_localisation/msg/: DetectionResults.msg  FloatArray.msg
aquaculture_inspection/sonar_based_localisation/scripts/: inspection_controller_node  sonar_based_localisation_node
aquaculture_inspection/sonar_based_localisation/src/sonar_based_localisation_algorithms/: InspectionController.py  SonarBasedLocalisationAlgorithm.py
aquaculture_inspection/sonar_based_localisation/src/sonar_based_localisation_ros/: InspectionControllerNode.py  SonarBasedLocalisationNode.py
aquaculture_inspection/sonar_based_localisation/srv/: ChangeDistanceParameters.srv  ChangeInspectionGains.srv  ChangeNetRadius.srv  ChangeSSEValues.srv
depth_controller/: CMakeLists.txt  package.xml
depth_controller/config/: config_depth_controller.yaml
depth_controller/docs/: README.md
depth_controller/include/depth_controller_algorithms/: DepthControllerAlgorithm.h
depth_controller/include/depth_controller_ros/: DepthControllerNode.h
depth_controller/launch/: depth_controller.launch
depth_controller/src/depth_controller_algorithms/: DepthControllerAlgorithm.cpp
depth_controller/src/depth_controller_ros/: DepthControllerNode.cpp
depth_controller/srv/: ChangeKffLamb.srv
gazebo_velocity_handler/: CMakeLists.txt  package.xml  setup.py
gazebo_velocity_handler/config/: config_gazebo_velocity_handler.yaml
gazebo_velocity_handler/docs/: README.md
gazebo_velocity_handler/launch/: gazebo_velocity_handler.launch
gazebo_velocity_handler/scripts/: gazebo_velocity_handler_node
gazebo_velocity_handler/src/gazebo_velocity_handler_algorithms/: GazeboVelocityHandlerAlgorithm.py
gazebo_velocity_handler/src/gazebo_velocity_handler_ros/: GazeboVelocityHandlerNode.py
multibeam_sonar/multibeam_sonar/: CMakeLists.txt  package.xml
multibeam_sonar/multibeam_sonar/doc/: README.md
multibeam_sonar/nps_uw_multibeam_sonar/scripts/: plotRawData_GPURay_based.m  plotRawData_Raster_based.m
multibeam_sonar/nps_uw_multibeam_sonar/src/: gazebo_multibeam_sonar_raster_based.cpp  gazebo_multibeam_sonar_ray_based.cpp
multibeam_sonar/nps_uw_multibeam_sonar/urdf/: multibeam_sonar_blueview_p900.xacro
surge_controller/: CMakeLists.txt  package.xml
surge_controller/config/: config_surge_controller.yaml
surge_controller/docs/: README.md
surge_controller/include/surge_controller_algorithms/: SurgeControllerAlgorithm.h
surge_controller/include/surge_controller_ros/: SurgeControllerNode.h
surge_controller/launch/: surge_controller.launch
surge_controller/src/surge_controller_algorithms/: SurgeControllerAlgorithm.cpp
surge_controller/src/surge_controller_ros/: SurgeControllerNode.cpp
thesis_bringup/: CMakeLists.txt  package.xml
thesis_bringup/config/dev_configs/: personal_ros.yaml
thesis_bringup/config/dev_configs/.ros_tmp/: permanent_ros_bluerov_heavy0.yaml  personal_ros_bluerov_heavy0.yaml
thesis_bringup/config/vehicles/bluerov_heavy/: control.yaml  process.yaml
thesis_bringup/config/vehicles/mblack/: process.yaml
thesis_bringup/config/vehicles/mvector/: control.yaml
thesis_bringup/launch/: start_scenario.launch  start_vehicle.launch
thesis_gazebo/thesis_gazebo/: CMakeLists.txt  package.xml
thesis_gazebo/thesis_gazebo/doc/: README.md
thesis_gazebo/thesis_gazebo_bringup/: CMakeLists.txt  package.xml
thesis_gazebo/thesis_gazebo_bringup/launch/: bluerov_heavy_defcamera_model.launch  vehicle_model.launch  world.launch
thesis_gazebo/thesis_vehicles/bluerov_heavy_defcamera_vehicle/: CMakeLists.txt  package.xml
thesis_gazebo/thesis_vehicles/thesis_vehicles/: CMakeLists.txt  package.xml
thesis_gazebo/thesis_worlds/: CMakeLists.txt  package.xml
thesis_gazebo/thesis_worlds/launch/: expo_lisbon_deep_cilindro_net.launch  expo_lisbon_deep_esfera_net.launch  expo_lisbon_net.launch
thesis_gazebo/thesis_worlds/models/fishing_net/: model.config  model.sdf
thesis_gazebo/thesis_worlds/models/fishing_net/meshes/: fishing_net.dae
thesis_gazebo/thesis_worlds/models/fishing_net_20_posts/: model.config  model.sdf
thesis_gazebo/thesis_worlds/models/fishing_net_cilindro/: model.config  model.sdf
thesis_gazebo/thesis_worlds/models/fishing_net_cilindro/meshes/: fishing_net_cilindro.dae
thesis_gazebo/thesis_worlds/models/fishing_net_esfera/: model.sdf
thesis_gazebo/thesis_worlds/models/fishing_net_new/: model.sdf
thesis_gazebo/thesis_worlds/worlds/: expo_lisbon_deep_cilindro_net.world  expo_lisbon_deep_esfera_net.world  expo_lisbon_net.world
thesis_image_processing/: CMakeLists.txt  package.xml  setup.py
thesis_image_processing/docs/: README.md
thesis_image_processing/launch/: thesis_image_processing.launch
thesis_image_processing/scripts/: thesis_image_processing_node
vision_thesis/detection/: CMakeLists.txt  package.xml  setup.py
vision_thesis/detection/config/: config_detection.yaml
vision_thesis/detection/docs/: README.md
vision_thesis/detection/launch/: detection.launch  ibvs.launch
vision_thesis/detection/msg/: DetectionResults.msg
vision_thesis/detection/scripts/: detection_node  ibvs_node
vision_thesis/detection/src/detection_algorithms/: KalmanFilter.py  david_object_detector.py  ibvs.py  object_detection.py  tracker.py
vision_thesis/detection/src/detection_algorithms/model_data/: classes.txt
vision_thesis/detection/src/detection_ros/: DetectionNode.py  IbvsNode.py
vision_thesis/vision_thesis/: CMakeLists.txt  package.xml
vision_thesis/vision_thesis/doc/: README.md
(+10 files in other folders)
