<?xml version="1.0"?>
<package format="2">
 <name>gazebo_velocity_handler</name>
 <version>1.0.0</version>
 <description>
 ADD HERE A SMALL DESCRIPTION OF THE NODE'S OBJECTIVE
 </description>

 <license>MIT</license>

 <author email="dsor.isr@gmail.com">#DSORTeam</author>
 <maintainer email="dsor.isr@gmail.com">#DSORTeam</maintainer>

 <buildtool_depend>catkin</buildtool_depend>

 <!-- Add here ROS dependencies -->
 <depend>std_msgs</depend> 
 <depend>rospy</depend>
 <depend>farol_msgs</depend>

</package>
