<?xml version="1.0"?>
<package format="2">
 <name>surge_controller</name>
 <version>1.0.0</version>
 <description>
 ADD HERE A SMALL DESCRIPTION OF THE NODE'S OBJECTIVE
 </description>

 <license>MIT</license>

 <author email="dsor.isr@gmail.com">#DSORTeam</author>
 <maintainer email="dsor.isr@gmail.com">#DSORTeam</maintainer>

 <buildtool_depend>catkin</buildtool_depend>

 <!-- Libraries to generate the messages and services -->
 <build_depend>message_generation</build_depend>
 <exec_depend>message_runtime</exec_depend>
 
 <!-- Add here ROS dependencies -->
 <depend>roscpp</depend>
 <depend>farol_msgs</depend>
 <depend>std_msgs</depend>
 <depend>auv_msgs</depend>
 <depend>dsor_utils</depend>
 <depend>dsor_msgs</depend>
 <depend>farol_gimmicks_library</depend>

 
</package>
