<?xml version="1.0"?>
<package format="2">
  <name>thesis_bringup</name>
  <version>1.0.0</version>
  <description>The thesis_bringup package</description>

  <author email="dsor.isr@gmail.com">#DSORTeam</author>
  <maintainer email="dsor.isr@gmail.com">#DSORTeam</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
